# id3dev

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  _config.yml  _poss  _user  _v23header1  _v23header2  _v4ext  ae  cm  eventcode  extheader  geo  main.c  makefile  output.txt  readme.md  run.sh  rva  same.txt  standard24.txt  supportedFrames.txt  synclyrics  testfile
assets/: beetlebum.json  danybrown2.json  sorry4dying.json
docs/: CMakeLists.txt  DoxygenLayout.xml  index.html  mainpage.dox  standard.html  standard24.txt
docs/doxygen/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_000001_000003.html  dir_000001_000004.html  dir_000002_000001.html  dir_000002_000005.html  dir_000003_000001.html  dir_000003_000002.html  dir_000003_000004.html  dir_000004_000000.html  dir_000004_000005.html  dir_000005_000001.html  dir_000005_000003.html  dir_000006_000001.html  dir_000006_000005.html  dir_32dc338714de0ee060cb02514f32d1e5.html  dir_32dc338714de0ee060cb02514f32d1e5.js  dir_32dc338714de0ee060cb02514f32d1e5_dep.map  dir_32dc338714de0ee060cb02514f32d1e5_dep.md5  dir_4694b34367a579bd39015063b393b886.html  dir_4694b34367a579bd39015063b393b886.js  dir_4694b34367a579bd39015063b393b886_dep.map  dir_4694b34367a579bd39015063b393b886_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5961dfa8fbae287f4ca733476d5e67be.html  dir_5961dfa8fbae287f4ca733476d5e67be.js  dir_5961dfa8fbae287f4ca733476d5e67be_dep.map  dir_5961dfa8fbae287f4ca733476d5e67be_dep.md5  dir_5e1f16a1579bfc8de4f5c7a9974f0968.html  dir_5e1f16a1579bfc8de4f5c7a9974f0968.js  dir_5e1f16a1579bfc8de4f5c7a9974f0968_dep.map  dir_5e1f16a1579bfc8de4f5c7a9974f0968_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+279 more)
docs/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_15.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+28 more)
docs/img/: ID3v2_2_header.drawio  ID3v2_extendedHeader.drawio  ID3v2_structure.drawio  ID3v2_tagHeader.drawio
examples/: CMakeLists.txt
examples/c/: buildTag.c  displayAllText.c  extractTag.c  listAllFrames.c  printInfo.c  savePicture.c
id3dependencies/: CMakeLists.txt
include/: id3.h  id3dev.h  id3v1.h  id3v2.h
include/id3v1/: id3v1.h  id3v1Parser.h  id3v1Types.h
include/id3v2/: id3v2.h  id3v2Context.h  id3v2Frame.h  id3v2Parser.h  id3v2TagIdentity.h  id3v2Types.h
include/util/: id3Defines.h  id3Helpers.h  id3Reader.h  id3Return.h  id3Types.h  id3v1Manipulate.h  id3v1Write.h  id3v2Frames.h  id3v2Header.h  id3v2Helpers.h  id3v2Manipulate.h  id3v2Write.h
interfaces/python/: CMakeLists.txt
scripts/: build.py  docs.py  examples.py  interfaces.py  test.py
scripts/common/: InformUser.py  buildHelpers.py
src/: CMakeLists.txt  id3Helpers.c  id3Reader.c  id3dev.c  id3lib.c  id3v1Manipulate.c  id3v1Write.c  id3v1lib.c  id3v2Frames.c  id3v2Header.c  id3v2Helpers.c  id3v2Manipulate.c  id3v2Write.c  id3v2lib.c
src/id3v1/: id3v1.c  id3v1Parser.c  id3v1parser.c
src/id3v2/: id3v2.c  id3v2Context.c  id3v2Frame.c  id3v2Parser.c  id3v2TagIdentity.c
tests/: CMakeLists.txt  id3devFunctions.c  id3v1Functions.c  id3v2ContextFunctions.c  id3v2FrameFunctions.c  id3v2Functions.c  id3v2ParserFunctions.c  id3v2TagIdentityFunctions.c
